feat: 로그인, 회원가입 UI작성 90%, firebase로 구글로그인 구현

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,3 +40,12 @@ body {
   padding-top: 5rem;
   padding-bottom: 5rem;
 }
+
+.link-text {
+  @apply text-seagull-600;
+  transition: .3s ease-in-out;
+}
+
+.link-text:hover {
+  @apply text-seagull-700;
+}
