feat: tag 리스트 페이지, tag 조회 페이지

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -72,7 +72,7 @@ body {
   @apply border border-seagull-400 bg-white text-seagull-400;
 
   &:hover {
-    @apply hover:bg-gray-100;
+    @apply hover:bg-seagull-50;
   }
 }
 
