--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,34 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@theme {
+  --color-waikawa-gray-50: #f2f7fb;
+  --color-waikawa-gray-100: #e7f0f8;
+  --color-waikawa-gray-200: #d3e2f2;
+  --color-waikawa-gray-300: #b9cfe8;
+  --color-waikawa-gray-400: #9cb6dd;
+  --color-waikawa-gray-500: #839dd1;
+  --color-waikawa-gray-600: #6a7fc1;
+  --color-waikawa-gray-700: #6374ae;
+  --color-waikawa-gray-800: #4a5989;
+  --color-waikawa-gray-900: #414e6e;
+  --color-waikawa-gray-950: #262c40;
+  
+  --color-seagull-50: #effaff;
+  --color-seagull-100: #dff4ff;
+  --color-seagull-200: #b8ecff;
+  --color-seagull-300: #78deff;
+  --color-seagull-400: #4bd4ff;
+  --color-seagull-500: #06b8f1;
+  --color-seagull-600: #0094ce;
+  --color-seagull-700: #0076a7;
+  --color-seagull-800: #02638a;
+  --color-seagull-900: #085272;
+  --color-seagull-950: #06344b;
+  
+  --background-image-gradient-radial: radial-gradient(var(--tw-gradient-stops));
+  --background-image-gradient-conic: conic-gradient(from 180deg at 50% 50%, var(--tw-gradient-stops));
+  --background-image-bg-login: url(/images/bg/img_bg_login.png);
+}
 
 :root {
   --foreground-rgb: 0, 0, 0;
