--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,9 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 @theme {
+  --color-black: #17171b;
+  --font-base: 14px;
+
   --color-waikawa-gray-50: #f2f7fb;
   --color-waikawa-gray-100: #e7f0f8;
   --color-waikawa-gray-200: #d3e2f2;
@@ -12,7 +15,7 @@
   --color-waikawa-gray-800: #4a5989;
   --color-waikawa-gray-900: #414e6e;
   --color-waikawa-gray-950: #262c40;
-  
+
   --color-seagull-50: #effaff;
   --color-seagull-100: #dff4ff;
   --color-seagull-200: #b8ecff;
@@ -24,24 +27,13 @@
   --color-seagull-800: #02638a;
   --color-seagull-900: #085272;
   --color-seagull-950: #06344b;
-  
+
   --background-image-gradient-radial: radial-gradient(var(--tw-gradient-stops));
-  --background-image-gradient-conic: conic-gradient(from 180deg at 50% 50%, var(--tw-gradient-stops));
+  --background-image-gradient-conic: conic-gradient(
+    from 180deg at 50% 50%,
+    var(--tw-gradient-stops)
+  );
   --background-image-bg-login: url(/images/bg/img_bg_login.png);
-}
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
 }
 
 @font-face {
@@ -65,9 +57,8 @@ body {
 }
 
 .container {
-  min-height: calc(100vh - 10rem);
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding: 5rem 1.5rem 10rem;
+  margin: 0 auto;
 }
 
 .container.narrow {
@@ -98,7 +89,7 @@ body {
 }
 
 .btn-linePrimary {
-  @apply border border-seagull-400 bg-white text-seagull-400;
+  @apply border-seagull-400 text-seagull-400 border bg-white;
 
   &:hover {
     @apply hover:bg-seagull-50;
